<resources>
    <string name="app_name">AI Topics</string>
    <string name="path_finder">Path Finder</string>
    <string name="assisted_minesweeper">Assisted Minesweeper</string>
    <string name="sudoku">Sudoku</string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="questions_bot">Questions Bot</string>
    <string name="path_finder_guide">Drag blocks and place them on the grid</string>
    <string name="wall">Wall Block</string>
    <string name="start">Start Block</string>
    <string name="end">End Block</string>
    <string name="find_path">Find Path</string>
    <string name="reset">Reset Tiles</string>
    <string name="reset_game">Reset Game</string>
    <string name="restart">Restart Animation</string>
    <string name="assist_me">Assist Me</string>
    <string name="check_answer">Check Answer</string>
    <string name="ask_question">Ask a question</string>
    <string name="find_answer">Find Answer</string>
</resources>