<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/menu_bg">

    <Button
        android:id="@+id/pathFinderButton"
        android:background="@drawable/curved_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/path_finder"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/assistedMinesweeper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/assistedMinesweeper"
        android:background="@drawable/curved_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/assisted_minesweeper"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7"/>

    <Button
        android:id="@+id/sudokuButton"
        android:background="@drawable/curved_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sudoku"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/assistedMinesweeper"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/ticTacToeButton"
        android:background="@drawable/curved_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/sudokuButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>