<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PathFinderActivity"
    android:id="@+id/rootLayout">


    <TextView
        android:id="@+id/guideTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/path_finder_guide"
        android:textSize="15sp"/>

    <LinearLayout
        android:id="@+id/wallSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/startSection"
        app:layout_constraintTop_toBottomOf="@id/guideTextView"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/wallBlockWord"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"

            android:text="@string/wall"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/wallBlock"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="#000000"
            android:tag="wall" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/startSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/wallSection"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/startBlockWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/startBlock"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="#00FF00"
            android:tag="start"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/endSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/wallSection"

        app:layout_constraintLeft_toRightOf="@id/startSection"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center">

        <TextView
            android:id="@+id/endBlockWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/end"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/endBlock"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:background="#FF0000"
            android:tag="end" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gameGridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/wallSection"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>